# votingtool

./: .clang  CMakeLists.txt  README.md  main.cpp
doc/: design
utils/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  Printer.h  Validator.h
